--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-
 panel/fp-info-cache
 panel/fp-lib-table
 main/fab/~$pipes_cpl.xlsx
 main/fp-info-cache
 main/fp-info-cache
-pipes/pipes-backups
+main/main-backups
 panel/panel-backups
 main/#auto_saved_files#
-main/main-backups
-pipes_sub/pipes_sub-backups
 img
 docs
 ~$*
+*.bat
+config.csv
+checkin_comment.txt
